
[project]
name = "advanced-phone-intelligence"
version = "0.1.0"
description = "Advanced Phone Number Intelligence Platform"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "phonenumbers>=8.13.51",
    "requests>=2.32.3",
    "streamlit>=1.32.0",
    "groq>=0.4.1",
    "pypdf>=4.0.1",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "plotly>=5.19.0",
    "scikit-learn>=1.4.1.post1",
    "tensorflow>=2.15.0",
    "torch>=2.2.0",
    "transformers>=4.37.2",
    "spacy>=3.7.2",
    "networkx>=3.2.1",
    "folium>=0.15.1",
    "opencv-python-headless>=4.9.0.80",
    "selenium>=4.18.1",
    "faker>=22.6.0"
]
